$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-28 (opened March 17, 2013)

	* rda: eigenvalues are now regarded as zero if they are very small
	compared to the first eigenvalue. Earlier we used fixed limit of
	1e-4, but now the limit is first eigenvalues * 1e-5. Similar
	change was not made in cca, since there the theoretical maximum of
	the eigenvalue is 1, and comparison to an absolute minimum
	threshold of 1e-4 makes sense.
	
Version 2.1-27 (closed March 17, 2013)

	* cca/rda/capscale: removed references to 'u.eig' and 'v.eig'
	items in support functions. These now use 'u' and 'v' items and
	scale these with 'eig' (or diag(sqrt(eig))) when needed. This
	prepares for removing items 'u.eig', 'v.eig' and 'wa.eig' in vegan
	2.3 and 2.4. Concerns fitted.capscale, goodness.cca and
	goodness.rda. The documentation has warned about removing these
	*.eig items for years, and most vegan functions already avoided
	using them. We have no idea if any external packages depend on
	these and therefore we delay the removal till vegan 2.3 and 2.4
	release. However, we warn about this in NEWS for 2.0-7 and also
	say this clearly in cca.object documentation.

	* nestedtemp: function failed if the matrix fill was < 0.38%,
	because the fill line parameter was outside the original
	estimation bracket. Now bracket is moved up if the estimation
	fails. The problem was reported by Carsten Dormann (Univ Freiburg)
	and Benjamin A. Sikes (Lincoln University, NZ).
	
	* specaccum: gained argument 'w' for weights to give the sampling
	effort. This resurrects a feature that was introduced in r1505 (22
	Feb 2011) and 1507, and removed in r1606 (26 May 2011). It seems
	that BiodiversityR::balanced.specaccum() provides the same feature
	but we still try it here.  The feature was resurrected after a
	user query by Bastien Mérigot (Univ Montpellier II). The working
	of the new argument is still untested with specaccum() support
	functions.
